add topic summary
